force-app/main/default/objects/Release_Assignment__c/Release_Assignment__c.object-meta.xml
<CustomObject>
    <label>Release Assignment</label>
    <nameField>
        <displayFormat>RAN-{000000}</displayFormat>
        <label>Release Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>