force-app/main/default/objects/Release_Assignment__c/fields/Release_Playbook__c.field-meta.xml
<CustomField>
    <fullName>Release_Playbook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release Playbook</label>
    <referenceTo>Release_Playbook__c</referenceTo>
    <relationshipLabel>Release Assignments</relationshipLabel>
    <relationshipName>Release_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>