force-app/main/default/objects/Release_Assignment__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Release Lead</fullName>
            </value>
            <value>
                <fullName>Tech Lead</fullName>
            </value>
            <value>
                <fullName>Product Owner</fullName>
            </value>
            <value>
                <fullName>Dev Lead</fullName>
            </value>
            <value>
                <fullName>DevOps</fullName>
            </value>
            <value>
                <fullName>FSC PO</fullName>
            </value>
            <value>
                <fullName>DevOps Lead</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>