force-app/main/default/objects/Release_Assignment__c/recordTypes/Assignment_Users.recordType-meta.xml
<RecordType>
    <fullName>Assignment_Users</fullName>
    <active>true</active>
    <label>Assignment Users</label>
</RecordType>