force-app/main/default/objects/Release_Assignment__c/recordTypes/Template_Release_Assignments.recordType-meta.xml
<RecordType>
    <fullName>Template_Release_Assignments</fullName>
    <active>true</active>
    <label>Template Release Assignments</label>
</RecordType>