force-app/main/default/objects/Release_Assignment__c/listViews/Assignment_Users.listView-meta.xml
<ListView>
    <fullName>Assignment_Users</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Role__c</columns>
    <columns>Company__c</columns>
    <columns>Contact__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Release_Assignment__c.Assignment_Users</value>
    </filters>
    <label>Assignment Users</label>
</ListView>