force-app/main/default/objects/Release_Assignment__c/listViews/Template_Release_Assignments.listView-meta.xml
<ListView>
    <fullName>Template_Release_Assignments</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Role__c</columns>
    <columns>Release_Playbook__c</columns>
    <columns>Company__c</columns>
    <columns>Contact__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Release_Assignment__c.Template_Release_Assignments</value>
    </filters>
    <label>Template Release Assignments</label>
</ListView>